--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
 /* Html */
 html {
     scroll-behavior: smooth;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
 }
 
 /* Body  */
