--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ section.default{
 }
 .about-me-text{
     width: 50%;
-    text-align: justify;
+    text-align: left;
     padding-left: 10px;
     border-left: 3px solid #c2c2c2;
     margin: auto;
