--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ strong{
 /* Header */
 header{
     position: absolute;
-    margin:30px;
+    margin: 28px 40px 30px 40px;
     left: 0;
     right: 0;
 }
@@ -106,7 +106,7 @@ header{
 }
 h1.logo {
     font-family: 'Sacramento', sans-serif;
-    font-size: 50px;
+    font-size: 54px;
     font-weight: 100;
     margin: 0px;
     padding: 0px;
@@ -125,20 +125,39 @@ h1.logo {
 
 nav li{
     display: inline-block;
-    margin: 5px;
-    font-weight: 700;
+    margin: 0px;
+    padding: 0%;
+    font-weight: 400;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 18px;
     position: relative;
 }
 nav a{
     display: block;
-    padding: 16px;
+    /* padding: 0 16px 0 16px; */
 }
 nav a:hover,
 nav a:focus{
     color: #4e7d88b6;
 }
+
+ul.nav{
+    padding-top: 14px;
+}
+
+#contactNav{
+    padding: 0 10px  0 16px;
+    border-left: 2px solid #333333;
+}
+#aboutNav{
+    padding: 0 14px 0 16px;
+    border-left: 2px solid #333333;
+}
+#skillNav{
+    padding: 0 14px 0 0;
+}
+
+
 
 @media(max-width: 870px){
     nav li{
@@ -231,7 +250,7 @@ section.default{
 /* Scroll down */
 .scrolldown{
     position: absolute;
-    bottom: 10vh;
+    bottom: 5vh;
     left: 50%;
     width: 40px;
     height: 40px;
@@ -244,8 +263,8 @@ section.default{
     display: block;
     width: 100%;
     height: 100%;
-    border-bottom: 2px solid #fff;
-    border-right: 2px solid #fff;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
     opacity: .7;
 }
 .scrolldown span:nth-child(1){
