--- a/submitted.css
+++ b/submitted.css
@@ -7,7 +7,7 @@ body{
 }
 
 h1{
-  font-weight: 500;
+  font-weight: 400;
   color: #A395E9;
 }
 
@@ -43,14 +43,14 @@ hr{
 .container{
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .content{
   background-color: #151C28;
-  padding: 25px 40px 50px 40px;
+  padding: 25px 50px 50px 50px;
   border-radius: 1.25rem;
 }
 
@@ -60,14 +60,12 @@ hr{
   }
 }
 
-@media screen and (max-width: 617px){
-  .container{
-    width: 70%;
-  }
-}
-
 @media screen and (max-width: 580px){
   .container{
     width: 80%;
+  }
+
+  .content{
+    padding: 25px 40px 50px 40px;
   }
 }
